{
  "sourceLanguage" : "en",
  "strings" : {
    "Add bookmark" : {

    },
    "Bookmarks" : {
      "extractionState" : "manual"
    },
    "Delete" : {

    },
    "Edit" : {

    },
    "Edit Bookmark" : {

    },
    "Favorites" : {
      "extractionState" : "manual"
    },
    "Folder" : {

    },
    "Location" : {

    },
    "Locked" : {

    },
    "Name" : {

    },
    "No bookmarks" : {

    },
    "Note" : {

    },
    "Reading list" : {
      "extractionState" : "manual"
    },
    "Unlock" : {

    },
    "URL" : {

    },
    "Vault" : {
      "extractionState" : "manual"
    }
  },
  "version" : "1.0"
}